--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,12 @@ dependencies:
     sdk: flutter
 
 
+  hooks_riverpod: ^1.0.3
   provider: ^6.0.2
   flutter_riverpod: ^1.0.3
   cupertino_icons: ^1.0.2
+  freezed: ^2.0.3
+  freezed_annotation: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +26,7 @@ dev_dependencies:
 
   flutter_lints: ^1.0.0
 
+  build_runner: ^2.1.10
 flutter:
 
   uses-material-design: true
