--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   freezed: ^2.0.3
   freezed_annotation: ^2.0.3
+  shared_preferences: ^2.0.15
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  json_serializable: ^6.2.0
   flutter_lints: ^1.0.0
 
   build_runner: ^2.1.10
